kubernetes/apps/network/envoy-gateway/templates/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-egress-internal
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
specs:
  - endpointSelector:
      matchLabels:
        job-name: envoy-gateway-gateway-helm-certgen
    egress:
      - toEntities:
          - kube-apiserver
      - toEndpoints:
          - {}
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: envoy-gateway
    egress:
      - toEntities:
          - kube-apiserver
          - cluster
      - toEndpoints:
          - {}
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/managed-by: envoy-gateway
    egress:
      - toEntities:
          - cluster
      - toEndpoints:
          - {}
